# 2024SciComProCoder

./: .gitignore  README.md  科学计算课程表20241126_v3.docx  科学计算课程表V21124_v2.docx  科学计算课程表V21124_v3.docx
C++/cases/: case1-hello.cpp  case12-pointer4.cpp  case13-pointer5.cpp  case14-pointer6.cpp  case16-class1.cpp  case18-string.cpp  case2-if.cpp  case4-while.cpp  case5-struct.cpp  case8-add2.cpp
C++/homework/: homework.txt
MPI/: MPI_test_prob.c  MPI_test_wait.c  conditioncom.c  mpi_type_vector.c  pi.c
OpenMP/codes/: 1-1stomp.cpp  2-reduce.cpp  3-schedule.cpp  5-sections.cpp  openmp.cpp
c++/: 1.txt
fortran/: 20241202fortran.pptx
fortran/codes/: case11-tag.f90  case15-recursive.f90  case17-arrayParameters.f90  case18-random.f90  case2-variables.f90  case21-module.f90  case24-ifdef.f90  case3-add.f90  case5-module.f90  case6-save.f90  case7-operator.f90
gaussianint/: QCCodeHe2-Bsuo.py  boys.F90
lec12_C++_in_Scientific_Computation/: 01-poly-function_overloading.cpp  02-poly-specialization-basic.cpp  02-poly-specialization-unroll.cpp  02-poly-template.cpp  03-poly-ABC_virtual_functions.cpp  04-type_traits.cpp  05-concept.cpp  CMakeLists.txt  README.md
lec12_C++_in_Scientific_Computation/answer/: 02-power_method.cpp  (+2 more)
lec2C++/: 20241201C++.pptx
lec3OpenMP/: OpenMP并行编程.pptx
lec6MPI/: CMakeLists.txt  greeting.c  mpi_hello.c  mpi_pi_input_time_point.c  mpi_pi_input_time_reduce.c  mpi_scatter.c  mpi_type_example.c
lec6MPI/Sugon作业提交脚本/: run.slurm  test.c
lec7矩阵计算及优化/: 1矩阵计算及优化.pptx  matmul.f90
lec8GTOint/: He2int.txt  QCCodeHe2-Bsuo.ipynb  QCCodeHe2-Bsuo.py
(+68 files in other folders)
